--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,8 @@ services:
        SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/auth
        SPRING_DATASOURCE_USERNAME: postgres
        SPRING_DATASOURCE_PASSWORD: postgres
+       SPRING_MAIL_USERNAME: ...
+       SPRING_MAIL_PASSWORD: ...
 
        UPLOAD_DIR_PATH: "/uploads"
      volumes:
