added README and fixed some bugs

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,7 @@ services:
        SPRING_MAIL_USERNAME: ...
        SPRING_MAIL_PASSWORD: ...
 
+
        UPLOAD_DIR_PATH: "/uploads"
      volumes:
        - uploads_data:/uploads
@@ -31,4 +32,4 @@ services:
 
 volumes:
   db_data:
-  uploads_data:
+  #uploads_data:
