improved code, added way to create directories and also move files in directories

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,14 @@ upload.dir.path=${UPLOAD_DIR_PATH:/home/melias/uploads}
 
 security.jwt.secret-key=v3hB6lX9YwF7jC4tZmG8aD2rP5uO0iK1sE6qJ9kTmH4lYpXcWwS
 # in millis
-security.jwt.expiration-time=600000
+security.jwt.expiration-time=6000000
 #
 # Mail properties
+
+
+
+
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 #
@@ -51,5 +56,3 @@ spring.servlet.multipart.max-request-size=2GB
 #security.jwt.secret-key=${JWT_SECRET_KEY}
 
 #spring.config.import=optional:file:.env[.properties]
-
-
