--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,25 +11,27 @@ services:
       - db_data:/var/lib/postgresql/data
 
   backend:
-     build: .
-     depends_on:
-       - db
-     ports:
-       - "8080:8080"
-     environment:
-       # in application.properties we use localhost  instead of name of service
-       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/auth
-       SPRING_DATASOURCE_USERNAME: postgres
-       SPRING_DATASOURCE_PASSWORD: postgres
-       SPRING_MAIL_USERNAME: ...
-       SPRING_MAIL_PASSWORD: ...
+    build: .
+    depends_on:
+      - db
+    ports:
+      - "8080:8080"
+    environment:
+      # in application.properties we use localhost  instead of name of service
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/auth
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
+      SPRING_MAIL_USERNAME: ...
+      SPRING_MAIL_PASSWORD: ...
 
 
-       UPLOAD_DIR_PATH: "/uploads"
-     volumes:
-       - uploads_data:/uploads
+      UPLOAD_DIR_PATH: "/uploads"
+    volumes:
+      - uploads_data:/uploads:U
+      - ${HOME}:/host_home:ro
+
 
 
 volumes:
   db_data:
-  #uploads_data:
+  uploads_data:
